force-app/main/default/objects/Receiver__c/Receiver__c.object-meta.xml
<CustomObject>
    <label>Receiver</label>
    <pluralLabel>Receivers</pluralLabel>
    <nameField><label>Receiver Name</label><type>Text</type></nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>