force-app/main/default/objects/Receiver__c/fields/Parcel__c.field-meta.xml
<CustomField>
    <fullName>Parcel__c</fullName>
    <label>Parcel</label>
    <type>Lookup</type>
    <referenceTo>Parcel__c</referenceTo>
    <relationshipLabel>Receivers</relationshipLabel>
    <relationshipName>Receivers</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>