force-app/main/default/objects/Receiver__c/fields/Receiver_Address__c.field-meta.xml
<CustomField>
    <fullName>Receiver_Address__c</fullName>
    <label>Receiver's Address</label>
    <type>Location</type>
    <scale>6</scale>
</CustomField>