force-app/main/default/objects/Receiver__c/fields/Receiver_Email__c.field-meta.xml
<CustomField>
    <fullName>Receiver_Email__c</fullName>
    <label>Receiver Email</label>
    <type>Email</type>
</CustomField>